# runic

./: .gitignore  CMakeLists.txt  README.md  hungryghoul.runic  solring.runic  test.c  vcpkg-configuration.json
include/: runic.h
src/: functionhelpers.c  main.c  memoryutils.c  parser.c
